--- a/index.html.liquid
+++ b/index.html.liquid
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <link data-trunk rel="rust" href="crates/client/Cargo.toml" data-bin="example-fullstack-client" />
+    <link data-trunk rel="rust" href="crates/client/Cargo.toml" data-bin="{{project-name}}-client" />
     <link data-trunk rel="scss" href="index.scss" />
     <!--%STACKABLE_HEAD%-->
 </head>
