--- a/crates/view/Cargo.toml.liquid
+++ b/crates/view/Cargo.toml.liquid
@@ -12,6 +12,7 @@ yew = { version = "0.20.0" }
 stackable-bridge = { version = "0.1.0", git = "https://github.com/futursolo/stackable" }
 time = { version = "0.3", features = ["wasm-bindgen", "serde-human-readable", "macros"] }
 tracing = "0.1.37"
+bounce = { version = "0.6.0", features = ["helmet"] }
 
 [dependencies.web-sys]
 version = "0.3"
