--- a/default/crates/client/Cargo.toml.liquid
+++ b/default/crates/client/Cargo.toml.liquid
@@ -18,6 +18,10 @@ stellation-frontend = "{{stellation_release_ver}}"
 # Stellation
 stellation-frontend = { git = "https://github.com/futursolo/stellation" }
 
+{% elsif stellation_target == "ci" %}
+# Stellation
+stellation-frontend = { path = "../../../stellation/crates/stellation-frontend" }
+
 {% endif %}
 # Logging
 tracing = "0.1"
