--- a/default/crates/server/src/main.rs.liquid
+++ b/default/crates/server/src/main.rs.liquid
@@ -3,7 +3,8 @@
 
 use {{crate_name}}_api as api;
 use {{crate_name}}_view as view;
-use stellation_backend::{Cli, Endpoint};
+use stellation_backend::Endpoint;
+use stellation_backend_cli::Cli;
 
 mod app;
 use app::ServerApp;
@@ -16,7 +17,7 @@ struct Frontend;
 
 #[tokio::main]
 async fn main() -> anyhow::Result<()> {
-    stellation_backend::trace::init_default("STELLATION_APP_SERVER_LOG");
+    stellation_backend_cli::trace::init_default("STELLATION_APP_SERVER_LOG");
 
     let endpoint = Endpoint::<ServerApp>::new().with_bridge(create_bridge());
 
