--- a/default/crates/server/Cargo.toml.liquid
+++ b/default/crates/server/Cargo.toml.liquid
@@ -15,11 +15,18 @@ rust-embed = { version = "6.4.2", features = ["interpolate-folder-path"] }
 
 {% if stellation_target == "release" %}
 # Stellation
-stellation-backend = { version = "{{stellation_release_ver}}", features = ["cli"] }
+stellation-backend = { version = "{{stellation_release_ver}}" }
+stellation-backend-cli = { version = "{{stellation_release_ver}}" }
 
 {% elsif stellation_target == "main" %}
 # Stellation
-stellation-backend = { git = "https://github.com/futursolo/stellation", features = ["cli"] }
+stellation-backend = { git = "https://github.com/futursolo/stellation" }
+stellation-backend-cli = { git = "https://github.com/futursolo/stellation" }
+
+{% elsif stellation_target == "ci" %}
+# Stellation
+stellation-backend = { path = "../../../stellation/crates/stellation-backend" }
+stellation-backend-cli = { path = "../../../stellation/crates/stellation-backend-cli" }
 
 {% endif %}
 # Example Workspace
