chore: sync template for 8da1fc3

--- a/default/crates/client/Cargo.toml.liquid
+++ b/default/crates/client/Cargo.toml.liquid
@@ -20,7 +20,7 @@ stellation-frontend = { git = "https://github.com/futursolo/stellation" }
 
 {% elsif stellation_target == "ci" %}
 # Stellation
-stellation-frontend = { path = "../../../stellation/crates/stellation-frontend" }
+stellation-frontend = { path = "../../../../stellation/crates/stellation-frontend" }
 
 {% endif %}
 # Logging
