--- a/default/crates/stctl/Cargo.toml.liquid
+++ b/default/crates/stctl/Cargo.toml.liquid
@@ -18,5 +18,5 @@ stctl = "{{stellation_release_ver}}"
 stctl = { git = "https://github.com/futursolo/stellation" }
 {% elsif stellation_target == "ci" %}
 # Stellation
-stctl = { path = "../../../stellation/crates/stctl" }
+stctl = { path = "../../../../stellation/crates/stctl" }
 {% endif %}
