--- a/default/crates/view/Cargo.toml.liquid
+++ b/default/crates/view/Cargo.toml.liquid
@@ -25,8 +25,8 @@ stellation-bridge = { git = "https://github.com/futursolo/stellation" }
 
 {% elsif stellation_target == "ci" %}
 # Stellation
-stellation-frontend = { path = "../../../stellation/crates/stellation-frontend" }
-stellation-bridge = { path = "../../../stellation/crates/stellation-bridge" }
+stellation-frontend = { path = "../../../../stellation/crates/stellation-frontend" }
+stellation-bridge = { path = "../../../../stellation/crates/stellation-bridge" }
 
 {% endif %}
 [dependencies.web-sys]
