--- a/default/crates/api/Cargo.toml.liquid
+++ b/default/crates/api/Cargo.toml.liquid
@@ -21,7 +21,7 @@ stellation-bridge = { git = "https://github.com/futursolo/stellation" }
 
 {% elsif stellation_target == "ci" %}
 # Stellation
-stellation-bridge = { path = "../../../stellation/crates/stellation-bridge" }
+stellation-bridge = { path = "../../../../stellation/crates/stellation-bridge" }
 
 {% endif %}
 
