--- a/default/crates/server/Cargo.toml.liquid
+++ b/default/crates/server/Cargo.toml.liquid
@@ -16,17 +16,20 @@ rust-embed = { version = "6.4.2", features = ["interpolate-folder-path"] }
 {% if stellation_target == "release" %}
 # Stellation
 stellation-backend = { version = "{{stellation_release_ver}}" }
+stellation-backend-tower = { version = "{{stellation_release_ver}}" }
 stellation-backend-cli = { version = "{{stellation_release_ver}}" }
 
 {% elsif stellation_target == "main" %}
 # Stellation
 stellation-backend = { git = "https://github.com/futursolo/stellation" }
+stellation-backend-tower = { git = "https://github.com/futursolo/stellation" }
 stellation-backend-cli = { git = "https://github.com/futursolo/stellation" }
 
 {% elsif stellation_target == "ci" %}
 # Stellation
-stellation-backend = { path = "../../../stellation/crates/stellation-backend" }
-stellation-backend-cli = { path = "../../../stellation/crates/stellation-backend-cli" }
+stellation-backend = { path = "../../../../stellation/crates/stellation-backend" }
+stellation-backend-tower = { path = "../../../../stellation/crates/stellation-backend-tower" }
+stellation-backend-cli = { path = "../../../../stellation/crates/stellation-backend-cli" }
 
 {% endif %}
 # Example Workspace
