--- a/default/crates/server/src/main.rs.liquid
+++ b/default/crates/server/src/main.rs.liquid
@@ -7,8 +7,9 @@ use stellation_backend_tower::TowerEndpoint;
 use stellation_backend_cli::Cli;
 
 mod app;
+mod bridge;
 use app::ServerApp;
-use api::create_bridge;
+use bridge::create_backend_bridge;
 
 #[cfg(stellation_embedded_frontend)]
 #[derive(rust_embed::RustEmbed)]
@@ -17,13 +18,17 @@ struct Frontend;
 
 #[tokio::main]
 async fn main() -> anyhow::Result<()> {
+    // Configures Logging
     stellation_backend_cli::trace::init_default("STELLATION_APP_SERVER_LOG");
 
-    let endpoint = TowerEndpoint::<ServerApp<_>>::new().with_bridge(create_bridge());
+    // Creates Endpoint
+    let endpoint = TowerEndpoint::<ServerApp<_>>::new().with_create_bridge(create_backend_bridge);
 
     #[cfg(stellation_embedded_frontend)]
-    let endpoint = endpoint.with_frontend(stellation_backend_tower::Frontend::new_embedded::<Frontend>());
+    let endpoint =
+        endpoint.with_frontend(stellation_backend_tower::Frontend::new_embedded::<Frontend>());
 
+    // Starts Server
     Cli::builder().endpoint(endpoint).build().run().await?;
 
     Ok(())
