--- a/default/crates/view/src/lib.rs.liquid
+++ b/default/crates/view/src/lib.rs.liquid
@@ -3,22 +3,53 @@
 
 use bounce::helmet::Helmet;
 use yew::prelude::*;
+use stylist::yew::{styled_component, Global};
 use {{crate_name}}_api as api;
 
 mod pages;
 use pages::{Greeting, ServerTime};
 
-#[function_component]
+#[styled_component]
 pub fn Main() -> Html {
     let fallback = html! {<div class="time-loading">{"Loading..."}</div>};
 
     html! {
         <>
+            <Global css={css!(r#"
+                html,
+                body {
+                    margin: 0;
+                    padding: 0;
+
+                    font-family: Verdana, Geneva, Tahoma, sans-serif;
+                    font-size: 15px;
+                }
+
+                @media (prefers-color-scheme: dark) {
+                    html {
+                        background-color: rgb(50, 50, 50);
+                        color: white;
+                    }
+                }
+            "#)} />
             <Helmet>
                 <title>{"Welcome to Stellation!"}</title>
             </Helmet>
-            <div class="container">
-                <div class="title">{"Welcome to Stellation!"}</div>
+            <div class={css!(r#"
+                height: 100vh;
+                width: 100%;
+
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+                align-items: center;
+            "#)}>
+                <div class={css!(r#"
+                    font-size: 2rem;
+                    line-height: 1.5em;
+                "#)}>
+                    {"Welcome to Stellation!"}
+                </div>
                 <Suspense {fallback}>
                     <ServerTime />
                 </Suspense>
