--- a/default/crates/view/Cargo.toml.liquid
+++ b/default/crates/view/Cargo.toml.liquid
@@ -12,6 +12,7 @@ yew = { version = "0.20.0" }
 time = { version = "0.3", features = ["wasm-bindgen", "serde-human-readable", "macros"] }
 tracing = "0.1.37"
 bounce = { version = "0.6.0", features = ["helmet"] }
+stylist = { version = "0.12.0", features = ["yew_integration"] }
 
 {% if stellation_target == "release" %}
 # Stellation
