--- a/default/crates/view/Cargo.toml.liquid
+++ b/default/crates/view/Cargo.toml.liquid
@@ -11,7 +11,8 @@ yew = { version = "0.20.0" }
 {{project-name}}-api = { path = "../api" }
 time = { version = "0.3", features = ["wasm-bindgen", "serde-human-readable", "macros"] }
 tracing = "0.1.37"
-bounce = { version = "0.6.0", features = ["helmet"] }
+bounce = { version = "0.7.0", features = ["helmet"] }
+stylist = { version = "0.12.0", features = ["yew_integration"] }
 
 {% if stellation_target == "release" %}
 # Stellation
@@ -22,6 +23,11 @@ stellation-bridge = "{{stellation_release_ver}}"
 # Stellation
 stellation-frontend = { git = "https://github.com/futursolo/stellation" }
 stellation-bridge = { git = "https://github.com/futursolo/stellation" }
+
+{% elsif stellation_target == "ci" %}
+# Stellation
+stellation-frontend = { path = "../../../../stellation/crates/stellation-frontend" }
+stellation-bridge = { path = "../../../../stellation/crates/stellation-bridge" }
 
 {% endif %}
 [dependencies.web-sys]
